--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/surgeharb/smart-pi#readme",
   "dependencies": {
     "johnny-five": "^0.11.6",
+    "mongoose": "^4.13.6",
     "raspi-io": "^8.1.0"
   }
 }
