--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/surgeharb/smart-pi#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "johnny-five": "^0.11.6",
     "mongoose": "^4.13.6",
     "raspi-io": "^8.1.0"
