--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/surgeharb/smart-pi#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "johnny-five": "^0.11.6",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^4.13.6",
     "raspi-io": "^8.1.0"
   }
