--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ PORT=13629
 DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=iot
+
+PUBNUB_PUBLISH=pub-c-281a62c7-7294-48e0-90f6-550f79f51f89
+PUBNUB_SUBSCRIBE=sub-c-2fdc8464-e4c4-11e7-9f1e-625d8ea2b1bc
+PUBNUB_SECRET=sec-c-Yjc5NGRmYzItNjJlZi00YjNhLWIxYzItZTIxY2I0YmVjNTJl
