--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "johnny-five": "^0.11.6",
     "jsonwebtoken": "^8.1.0",
     "mongodb-uri": "^0.9.7",
-    "mongoose": "^4.13.6",
-    "raspi-io": "^8.1.0"
+    "mongoose": "^4.13.6"
   }
 }
